--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,5 +20,6 @@
 @import "pages/about/header";
 @import "pages/about/instagram";
 
-@import "pages/gallery/gallery"
+@import "pages/gallery/gallery";
+@import "pages/gallery/gallery-modal"
 
