--- a/sass/pages/gallery/_gallery.scss
+++ b/sass/pages/gallery/_gallery.scss
@@ -1,21 +1,30 @@
 .gallery-grid {
     width: 95%;
+    max-width: 900px;
     @include flex_centered(row);
     flex-wrap: wrap;
     align-items: flex-start;
-    margin: 100px auto;
+    margin: 50px auto;
+
     .column {
         flex: 43%;
-        @include responsive($tablet_large){
-            flex: 30%;        
-        }
         margin: 0 5px;
+        @include responsive($tablet_large){
+            flex: 30%;
+            margin: 0 10px;        
+        }
 
         &-item {
             background: grey;
-            margin-top: 20px;
+            margin-top: 5px;
+            @include responsive($tablet_large){
+                margin-top: 20px;
+            }
             border-radius: 10px;
             background-size: cover;
+            width: 100%;
+            object-fit: cover;
+            cursor: pointer;
         }
         .gallery-xs{
             height: 100px;
