--- a/sass/pages/about/_instagram.scss
+++ b/sass/pages/about/_instagram.scss
@@ -39,7 +39,7 @@
 
                 &-item {
                     height: 100%;
-                    min-width: 150px;
+                   width: 150px;
                     margin: 0 10px;
                     background-size: cover;
                     border-radius: 10px;
