--- a/sass/components/_testimonials-carousel.scss
+++ b/sass/components/_testimonials-carousel.scss
@@ -3,6 +3,7 @@
 
     .testimonials-title {
         @include tilt_right;
+        margin: 150px 0 50px;
     }
     .testimonial-cards {
         width: 90%;
