--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,13 +33,23 @@
 
 
 .purple-title {
-    font-size: 2.1rem;
-    font-family: "Gotham Ultra";
-    color: $purple;  
-    text-align: center; 
-    margin: 0 0 30px 0;
+  font-family: "Gotham Ultra";
+  color: $purple;  
+  text-align: center; 
+  margin: 0 0 30px 0;
+  font-size: 2.1rem;
+  @include responsive($tablet){
+    font-size: 2.9rem;
+  }
+  @include responsive($desktop){
+    font-size: 3.3rem;
+  }
 }
 
 .font-medium {
   font-family: "Gotham Medium";
+}
+
+a {
+  text-decoration: none;
 }
