--- a/sass/components/_carousel-controls.scss
+++ b/sass/components/_carousel-controls.scss
@@ -6,7 +6,7 @@
     margin: 30px auto;
     @include responsive($tablet_large) {
         width: 400px;
-        margin: 0 30px 0;
+        margin: 30px 30px 0;
     }
 
     .selectors {
