--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,8 @@
 @import "pages/home/love";
 @import "pages/home/ready";
 
+@import "pages/services/services-header";
+
 @import "pages/about/header";
 @import "pages/about/instagram";
 
