--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,5 +23,5 @@
 @import "pages/about/instagram";
 
 @import "pages/gallery/gallery";
-@import "pages/gallery/gallery-modal"
+@import "pages/gallery/gallery-modal";
 
